[gd_scene load_steps=24 format=2]

[ext_resource path="res://World/master_key_red.png" type="Texture" id=1]
[ext_resource path="res://EnemyDisplayDemo.gd" type="Script" id=2]
[ext_resource path="res://Animals/MiniDeer1 chill solo.png" type="Texture" id=3]
[ext_resource path="res://World/cage_key_1.png" type="Texture" id=4]
[ext_resource path="res://fonts/PixelTandysoft-0rJG.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://UI/nightsky1.png" type="Texture" id=6]
[ext_resource path="res://Enemies/Demon_Ship_1_Anim_Aligned.png" type="Texture" id=7]
[ext_resource path="res://Enemies/Demon_Ship_2_Anim_Aligned.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=2]
size = 10
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 10
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.411765, 0.180392, 0.447059, 0.827451 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 7 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 7 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 7 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 6 ), SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=9]
radius = 5.0

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 8 )
region = Rect2( 256, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 8 )
region = Rect2( 512, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 8 )
region = Rect2( 768, 0, 256, 256 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 12 ), SubResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[sub_resource type="CircleShape2D" id=15]
radius = 4.47214

[node name="DemoOverviewScreen" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0862745, 0.0862745, 0.0941176, 1 )

[node name="ColorRect2" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 49.0
margin_right = -49.0
color = Color( 0.168627, 0.101961, 0.239216, 0.254902 )

[node name="ColorRect3" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 22.0
margin_bottom = -25.0
color = Color( 0.2, 0.14902, 0.239216, 0.388235 )

[node name="Sprite4" type="Sprite" parent="."]
self_modulate = Color( 0.65098, 0.639216, 0.639216, 1 )
position = Vector2( 167, 76 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )

[node name="Sprite5" type="Sprite" parent="."]
self_modulate = Color( 0.65098, 0.639216, 0.639216, 1 )
position = Vector2( 520, 76 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
visible = false
margin_left = 16.0
margin_top = 24.0
margin_right = 425.0
margin_bottom = 240.0
rect_scale = Vector2( 0.7, 0.7 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center] To complete the demo:

- Find the 3 hidden keys

- Free the 3 caged animals

- Defeat the Level Boss
 and retrieve the exit key 

- Make your way to the Exit Door!

 *This demo gives acces to area 1 in the forest zone. You will
Not be able to access any other zones or oilco bases. In addition, Leveling is capped at LVL 3*
[/center]"
text = " To complete the demo:

- Find the 3 hidden keys

- Free the 3 caged animals

- Defeat the Level Boss
 and retrieve the exit key 

- Make your way to the Exit Door!

 *This demo gives acces to area 1 in the forest zone. You will
Not be able to access any other zones or oilco bases. In addition, Leveling is capped at LVL 3*
"

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 221, 50 )
rotation = 0.785398
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 4 )

[node name="Sprite2" type="Sprite" parent="."]
visible = false
position = Vector2( 224, 72 )
texture = ExtResource( 3 )

[node name="Sprite3" type="Sprite" parent="."]
visible = false
position = Vector2( 225, 96 )
rotation = -0.785398
scale = Vector2( 0.085, 0.085 )
texture = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
visible = false
margin_left = 9.0
margin_top = 7.0
margin_right = 63.0
margin_bottom = 27.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 3 )
custom_styles/normal = SubResource( 1 )
text = "Return"

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
visible = false
margin_left = 269.0
margin_top = 167.0
margin_right = 433.0
margin_bottom = 207.0
rect_scale = Vector2( 0.3, 0.3 )
text = "Disclaimer: Saving is disabled for the demo."

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 137, 94 )
frames = SubResource( 8 )
frame = 4
playing = true

[node name="Area2D" type="Area2D" parent="AnimatedSprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite/Area2D"]
position = Vector2( 36, 12 )
shape = SubResource( 9 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.3
autostart = true

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 145, 81 )
frames = SubResource( 14 )
frame = 3
playing = true

[node name="Area2D" type="Area2D" parent="AnimatedSprite2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2/Area2D"]
position = Vector2( 29, 43 )
shape = SubResource( 15 )

[node name="Timer2" type="Timer" parent="."]
wait_time = 2.0

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
